# undistortedCam

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  config.cfg  extrinsics.yml  intrinsics.yml  last_extrinsics.yml  last_intrinsics.yml
data/: LICENSE.txt  extrinsics.yml  last_intrinsics.yml
include/: ConfigParser.h  DisparityVerifier.h  StereoCam.h  undistorted_cam.h
src/: CMakeLists.txt  ConfigParser.cpp  DisparityVerifier.cpp  StereoCam.cpp  StereoCam.h  main.cpp  undistorted_cam.cpp  undistorted_cam.h
